--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     Registrar mi asistencia personal
                 </h1>
                 <h5>
-                    Aquí puedes ver tu ubicación en tiempo real. <br> Para registrar tu asistencia, has clic en <strong>"Dar Asistencia"</strong>. Te pedira que ingreses tu numero de Legajo (otorgado por la empresa), luego tu nombre y listo.  
+                    Aquí puedes ver tu ubicación en tiempo real. <br> Para registrar tu asistencia, has clic en <strong>"Dar Asistencia"</strong>. Te pedira que ingreses tu nombre y listo.  
                 </h5>
                 <p id="estado"></p>
                 
